fix gap

--- a/sass/_extreme2.sass
+++ b/sass/_extreme2.sass
@@ -1,11 +1,11 @@
 .bg
-	background: url(../img/bg1.jpg) repeat-y 0 0
+	background: url(../img/bg1.jpg) repeat 0 0
 	overflow: hidden
-	+background-size(100%, auto)
+	//+background-size(100%, auto)
 .bg1
 	overflow: hidden
-	background: url(../img/bg0.jpg) repeat-y 0 0
-	+background-size(100%, auto)
+	background: url(../img/bg0.jpg) repeat 0 0
+	//+background-size(100%, auto)
 .box
 	+s(pic-right)
 	width: 251px
